--- a/chapter6-postprocess.tex
+++ b/chapter6-postprocess.tex
@@ -1,6 +1,15 @@
 \chapter{Fairness through post-processing}
 \label{fairness_postproc}
 
+\todo[inline]{missing some initial sentences}
+One application of re-ranking is to improve the \textit{diversity} of the results. As an example Maximum marginal relevance (MMR) adjusts the balance in the re-ranked list by minimizing the similarity between the new item and the previous chosen items \cite{carbonell1998use} while maximizing their relevance. The main idea in MMR is to avoid redundancy, in other words if one item doesn't meet a user's need, it's likely that another similar item to that won't suit the user as well. \cite{Ziegler:2005:IRL:1060745.1060754} provides another approach to diversify the ranked lists that operates only on item orderings instead of balancing similarity or relevance. 
+
+re-ranking is also a common approach to mitigate certain types of unfairness, for example representation unfairness. Usually learned relevance or ranking models often are computationally costly, therefore, re-ranking can be used as an approach to constraint the large previously produced results to achieve other goals without re-training the model.
+
+Compared to complex machine learning models, re-ranking approaches provide more transparency to the users of the system. Sonboli and Smith et al. \cite{Sonboli2021transparency} suggest to design to models that are transparent. So, the users will be able to understand the intentions of the system, detect any flaws in the algorithm, or in other words, have some agency over their results. Re-ranking models are easier to explain as the goals are well separated in the formula and the extend to which one wants fairness or accuracy can be controlled using their hyper-parameters. 
+
+
+\todo[inline]{advantages of re-ranking! and why we chose them?}
 \todo[inline]{I think it's better to break it into different mini chapters but write a page explaining these methods briefly and how they are connected maybe.}
 % \section{baseline rerankers}
 % \section{A survey of re-rankers} ( adding some overall experiments to compare methods)
