--- a/main.tex
+++ b/main.tex
@@ -123,13 +123,13 @@
 \begin{document}
 
 \input macros.tex
-% \input chapter1-intro.tex
-% \input chapter3-fairness.tex
-% \input chapter4-methodology.tex
-% \input chapter5-inprocess.tex
+\input chapter1-intro.tex
+\input chapter3-fairness.tex
+\input chapter4-methodology.tex
+\input chapter5-inprocess.tex
 \input chapter6-postprocess.tex
 \input chapter7-librec.tex
-% \input chapter8-conclusion.tex
+\input chapter8-conclusion.tex
 
 %%%%%%%%%   then the Bibliography, if any   %%%%%%%%%
 \bibliographystyle{plain}	% or "siam", or "alpha", etc.
