--- a/refs.bib
+++ b/refs.bib
@@ -1141,6 +1141,48 @@ author = {Sounman Hong and Sun Hyoung Kim},
 }
 
 
+@inproceedings{Srivastava2019fairnessnotions,
+author = {Srivastava, Megha and Heidari, Hoda and Krause, Andreas},
+title = {Mathematical Notions vs. Human Perception of Fairness: A Descriptive Approach to Fairness for Machine Learning},
+year = {2019},
+isbn = {9781450362016},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3292500.3330664},
+doi = {10.1145/3292500.3330664},
+booktitle = {Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery &amp; Data Mining},
+pages = {2459–2468},
+numpages = {10},
+location = {Anchorage, AK, USA},
+series = {KDD '19}
+}
+
+@inproceedings{Green2019algointheloop,
+author = {Green, Ben and Chen, Yiling},
+title = {Disparate Interactions: An Algorithm-in-the-Loop Analysis of Fairness in Risk Assessments},
+year = {2019},
+isbn = {9781450361255},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3287560.3287563},
+doi = {10.1145/3287560.3287563},
+booktitle = {Proceedings of the Conference on Fairness, Accountability, and Transparency},
+pages = {90–99},
+numpages = {10},
+location = {Atlanta, GA, USA},
+series = {FAT* '19}
+}
+
+
+@article{Gosepath2011equality,
+  title={Equality},
+  author={Gosepath S.},
+  journal={Metaphysics Research Lab, Stanford University},
+  year={2011},
+  publisher={Spring edition}
+}
+
+
 
 
 @article{pierrakos2003web,
@@ -5197,6 +5239,99 @@ series = {KDD '19}
   author={Moulin, Herv{\'e}},
   year={2004},
   publisher={MIT press}
+}
+
+@inproceedings{Hutchinson2019history,
+author = {Hutchinson, Ben and Mitchell, Margaret},
+title = {50 Years of Test (Un)Fairness: Lessons for Machine Learning},
+year = {2019},
+isbn = {9781450361255},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3287560.3287600},
+doi = {10.1145/3287560.3287600},
+booktitle = {Proceedings of the Conference on Fairness, Accountability, and Transparency},
+pages = {49–58},
+numpages = {10},
+location = {Atlanta, GA, USA},
+series = {FAT* '19}
+}
+
+@article{sureshframework2019,
+  title={A Framework for Understanding Unintended Consequences of Machine Learning},
+  author={Suresh, Harini and Guttag, John V},
+  year={2019}
+}
+
+@book{rothstein2017color,
+  title={The color of law: A forgotten history of how our government segregated America},
+  author={Rothstein, Richard},
+  year={2017},
+  publisher={Liveright Publishing}
+}
+
+@inproceedings{Hutchinson2021Account,
+author = {Hutchinson, Ben and Smart, Andrew and Hanna, Alex and Denton, Emily and Greer, Christina and Kjartansson, Oddur and Barnes, Parker and Mitchell, Margaret},
+title = {Towards Accountability for Machine Learning Datasets: Practices from Software Engineering and Infrastructure},
+year = {2021},
+isbn = {9781450383097},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3442188.3445918},
+doi = {10.1145/3442188.3445918},
+booktitle = {Proceedings of the 2021 ACM Conference on Fairness, Accountability, and Transparency},
+pages = {560–575},
+numpages = {16},
+location = {Virtual Event, Canada},
+series = {FAccT '21}
+}
+
+@inproceedings{Hanna2020CriticalRace,
+author = {Hanna, Alex and Denton, Emily and Smart, Andrew and Smith-Loud, Jamila},
+title = {Towards a Critical Race Methodology in Algorithmic Fairness},
+year = {2020},
+isbn = {9781450369367},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3351095.3372826},
+doi = {10.1145/3351095.3372826},
+booktitle = {Proceedings of the 2020 Conference on Fairness, Accountability, and Transparency},
+pages = {501–512},
+numpages = {12},
+location = {Barcelona, Spain},
+series = {FAT* '20}
+}
+
+
+
+@article{Friedman1996Bias,
+author = {Friedman, Batya and Nissenbaum, Helen},
+title = {Bias in Computer Systems},
+year = {1996},
+issue_date = {July 1996},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {14},
+number = {3},
+issn = {1046-8188},
+url = {https://doi.org/10.1145/230538.230561},
+doi = {10.1145/230538.230561},
+journal = {ACM Trans. Inf. Syst.},
+month = {jul},
+pages = {330–347},
+numpages = {18},
+}
+
+
+
+@article{clark2018demarginalizing,
+  title={Demarginalizing the Intersection of Spirituality and Law: Oppositional Cultural Practice Theory, Self-Transcendence, and Social Change},
+  author={Clark, Kim E},
+  journal={W. New Eng. L. Rev.},
+  volume={40},
+  pages={225},
+  year={2018},
+  publisher={HeinOnline}
 }
 
 @incollection{Thomson:FairRules,
